# requests/admin_request.go
@@ -1,13 +1,9 @@
 package requests
 
-type RequestLogin struct {
+type RequestCreateAccount struct {
 	Username string `json:"username" xml:"username"`
 	Pass     string `json:"pass" xml:"pass"`
-}
-
-type RequestRegister struct {
-	Username string `json:"username" xml:"username"`
-	Pass     string `json:"pass" xml:"pass"`
+	Type     string `json:"type" xml:"type"`
 	Name     string `json:"name" xml:"name"`
 	Phone    string `json:"phone" xml:"phone"`
 	Email    string `json:"email" xml:"email"`
