# requests/order_request.go
@@ -2,14 +2,13 @@ package requests
 
 type RequestOrder struct {
 	lastUpdate int64
-	Number string
-	Address string
-	Name string
-	Detail  []RequestOrderDetail
+	Number     string               `json:"number" xml:"number"`
+	Address    string               `json:"address" xml:"address"`
+	Name       string               `json:"name" xml:"name"`
+	Detail     []RequestOrderDetail `json:"detail" xml:"detail"`
 }
 
 type RequestOrderDetail struct {
-	ProductId int
-	Quantity int
+	ProductId int `json:"product_id" xml:"product_id"`
+	Quantity  int `json:"quantity" xml:"quantity"`
 }
-
