# requests/user_request.go
@@ -1,0 +1,9 @@
+package requests
+
+type RequestUser struct {
+	Name   string `json:"name" xml:"name"`
+	Phone  string `json:"phone" xml:"phone"`
+	Email  string `json:"email" xml:"email"`
+	Image  string `json:"image" xml:"image"`
+	Gender string `json:"gender" xml:"gender"`
+}
